start implementing the general app layout

--- a/Android Resource Helper/nbproject/private/private.properties
+++ b/Android Resource Helper/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/jafar/.netbeans/7.3/build.properties
+user.properties.file=/Users/mahdihijazi/Library/Application Support/NetBeans/7.2/build.properties
